Adding comments and clean up

--- a/src/components/kickstarterProjects/styles.css
+++ b/src/components/kickstarterProjects/styles.css
@@ -10,7 +10,7 @@
     font-weight: 600;
     display: flex;
     align-items: center;
-    gap:8px
+    gap:8px;
 }
 
 .table-contaner {
@@ -145,31 +145,9 @@ tr:hover {
     background-color: #edf1f9;
 }
 
-.pagination-container .pagination-item .arrow::before {
-    position: relative;
-    display: inline-block;
-    width: 0.4em;
-    height: 0.4em;
-    border-right: 0.12em solid rgba(0, 0, 0, 0.87);
-    border-top: 0.12em solid rgba(0, 0, 0, 0.87);
-    content: '';
-}
-
-.pagination-container .pagination-item .arrow.left {
-    transform: rotate(-135deg) translate(-50%);
-}
-
-.pagination-container .pagination-item .arrow.right {
-    transform: rotate(45deg);
-}
 
 .pagination-container .pagination-item-disabled {
     pointer-events: none;
-}
-
-.pagination-container .pagination-item.disabled .arrow::before {
-    border-right: 0.12em solid rgba(0, 0, 0, 0.43);
-    border-top: 0.12em solid rgba(0, 0, 0, 0.43);
 }
 
 .pagination-container .pagination-item.disabled:hover {
