--- a/src/components/kickstarterProjects/styles.css
+++ b/src/components/kickstarterProjects/styles.css
@@ -10,12 +10,32 @@
     font-weight: 600;
     display: flex;
     align-items: center;
-    gap:8px;
+    gap: 8px;
 }
 
 .table-contaner {
     flex: 1;
     overflow-y: auto;
+}
+ /* make scroll bar thin for windows OS */
+.table-contaner::-webkit-scrollbar {
+    width: 0.2em;
+    height: 0.2em;
+}
+
+.table-contaner::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.00);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.00);
+    border-radius: 10px;
+}
+
+.table-contaner::-webkit-scrollbar-thumb {
+    background-color: #bfc4ca;
+    border-radius: 10px;
+}
+
+.table-contaner::-webkit-scrollbar-thumb:hover {
+    background-color: #bfc4ca;
 }
 
 .project-table {
